Refactored + added some test vector support

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, [{enacl, ".*", {git, "https://github.com/aeternity/enacl.git", {ref, "2d354f9"}}}]}.
+{deps, [{enacl, ".*", {git, "https://github.com/aeternity/enacl.git", {ref, "2f50ba6"}}}]}.
+
+{profiles, [{test, [{deps, [{jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.8.0"}}}]}]}
+           ]}.
