Add xref configuration to rebar.config
Skip unused exports - that is expected from a library API…

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,8 @@
 
 {profiles, [{test, [{deps, [{jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.8.0"}}}]}]}
            ]}.
+
+{xref_checks, [undefined_function_calls, undefined_functions,
+               locals_not_used,
+               deprecated_function_calls, deprecated_functions]}.
+
