Prepare for version 1.0.0

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
-{deps, [{enacl, ".*", {git, "https://github.com/aeternity/enacl.git", {ref, "2f50ba6"}}}]}.
+{plugins, [rebar3_hex]}.
+{deps, [{enacl, "0.17.2"}]}.
 
 {profiles, [{test, [{deps, [{jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.8.0"}}}]}]}
            ]}.
