Improve type specs

--- a/rebar.config
+++ b/rebar.config
@@ -9,3 +9,4 @@
                locals_not_used,
                deprecated_function_calls, deprecated_functions]}.
 
+{dialyzer, [{warnings, [unknown]}]}.
